# getpaid_issue_example

./: db.sqlite3  pyproject.toml
test_project/: models.py  settings.py
test_project/migrations/: 0001_initial.py
