[tool.poetry]
name = "getpaid_test"
version = "0.1.0"
description = ""
authors = ["Mateusz Pydych <mateusz.pydych@ulam.io>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.4"
django-getpaid = "^2.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
